# simple_chat

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
